--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite --port $PORT"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -26,5 +27,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "vite": "^4.3.9"
+  },
+  "engines": {
+    "node": "v18.16.0",
+    "npm": "9.5.1"
   }
 }
