--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "start": "vite --port $PORT --host 0.0.0.0"
-
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -17,7 +16,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
